2012-05-19  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r117675.
        http://trac.webkit.org/changeset/117675
        https://bugs.webkit.org/show_bug.cgi?id=86938

        Broke builds. You can't initialize members by members
        themselves (Requested by rniwa on #webkit).

        * public/WebFrame.h:
        (WebFrame):
        * public/WebPlugin.h:
        (WebPlugin):
        (WebKit::WebPlugin::printBegin):
        * public/WebPrintParams.h:
        * src/WebFrameImpl.cpp:
        (WebKit):
        (WebKit::WebFrameImpl::printBegin):
        * src/WebFrameImpl.h:
        (WebFrameImpl):
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::printBegin):

2012-05-18  Jochen Eisinger  <jochen@chromium.org>

        [chromium] remove obsolete WebViewClient::startDragging version
        https://bugs.webkit.org/show_bug.cgi?id=86887

        Reviewed by Adam Barth.

        * public/WebViewClient.h:
        (WebKit::WebViewClient::startDragging):

2012-05-18  Kausalya Madhusudhanan  <kmadhusu@chromium.org>

        [Chromium] Use overloaded printBegin() webkit API to support auto fit to page functionality.
        https://bugs.webkit.org/show_bug.cgi?id=86684

        Reviewed by Darin Fisher.

        * public/WebFrame.h:
        (WebFrame):
        * public/WebPlugin.h:
        (WebPlugin):
        * public/WebPrintParams.h:
        (WebKit::WebPrintParams::WebPrintParams):
        (WebPrintParams):
        * src/WebFrameImpl.cpp:
        (WebKit):
        * src/WebFrameImpl.h:
        (WebFrameImpl):
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::printBegin):

2012-05-18  Ryosuke Niwa  <rniwa@webkit.org>

        Roll Chromium DEPS from r136942 to r137976.

        * DEPS:

2012-05-18  Aaron Colwell  <acolwell@chromium.org>

        Update Media Source implementation to reflect changes in 0.5 spec.
        https://bugs.webkit.org/show_bug.cgi?id=83607
